Upload trivia page

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,10 @@ a:hover {
   color: #fff;
 }
 
+.option {
+  padding-top: 2em;
+}
+
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
